--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -80,7 +80,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="howmuch-to-save-per-month" title="Monthly saving projections">
-                <span class="bi bi-calculator" aria-hidden="true"></span> Monthly savings
+                <span class="bi bi-calculator" aria-hidden="true"></span> Predict savings Needed
             </NavLink>
         </div>
         <!-- Informational pages -->
