added ad and nav

--- a/FinPlan.Web/Pages/TermsOfUse.razor
+++ b/FinPlan.Web/Pages/TermsOfUse.razor
@@ -1,11 +1,27 @@
 @page "/terms-of-use"
 
+
+	<script type="text/javascript">
+		atOptions = {
+			'key' : 'b5884e8b25ae5c2e95a95c2a81a11da4',
+			'format' : 'iframe',
+			'height' : 60,
+			'width' : 468,
+			'params' : {}
+		};
+	</script>
+	<script type="text/javascript" src="//www.highperformanceformat.com/b5884e8b25ae5c2e95a95c2a81a11da4/invoke.js"></script>
+
+
 <div class="about-hero jumbotron text-white p-4 rounded mb-4">
 	<div class="container">
 		<h1 class="display-5">Terms of Use</h1>
 		<p class="lead">Please read these terms before using the site.</p>
 	</div>
 </div>
+
+<!-- Adstreea 468x60 Ad Banner -->
+
 
 <div class="card p-3">
 	<div class="card-body">
