--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -58,29 +58,29 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill" aria-hidden="true"></span> Dashboard
             </NavLink>
         </div>
         
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="living-cost" title="Cost of living projections">
-                <span class="bi bi-list-ul" aria-hidden="true"></span> Cost of Living
+                <span class="bi bi-list-ul" aria-hidden="true"></span> Living Cost Estimator
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="retirement-fire" title="Financial Independence, Retire Early">
-                <span class="bi bi-wallet2" aria-hidden="true"></span> FIRE Planner
+                <span class="bi bi-wallet2" aria-hidden="true"></span> Retirement Planner (FIRE)
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="wealth-journey" title="How your savings will grow">
-                <span class="bi bi-calculator" aria-hidden="true"></span> Wealth Journey
+                <span class="bi bi-calculator" aria-hidden="true"></span> Savings Growth Projection
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="howmuch-to-save-per-month" title="Monthly saving projections">
-                <span class="bi bi-calculator" aria-hidden="true"></span> Predict savings Needed
+                <span class="bi bi-calculator" aria-hidden="true"></span> Goal-Based Calculator
             </NavLink>
         </div>
         <!-- Informational pages -->
