--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -69,18 +69,18 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="retirement-fire" title="Financial Independence, Retire Early">
-                <span class="bi bi-wallet2" aria-hidden="true"></span> Retirement Planner (FIRE)
+                <span class="bi bi-wallet2" aria-hidden="true"></span> Retirement Withdrawals
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="wealth-journey" title="How your savings will grow">
-                <span class="bi bi-calculator" aria-hidden="true"></span> Savings Growth Projection
+                <span class="bi bi-calculator" aria-hidden="true"></span> Savings Growth
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="howmuch-to-save-per-month" title="Monthly saving projections">
-                <span class="bi bi-calculator" aria-hidden="true"></span> Goal-Based Calculator
+                <span class="bi bi-calculator" aria-hidden="true"></span> Goal-Based Savings
             </NavLink>
         </div>
         <!-- Informational pages -->
